// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentResults component When SimpleTable documents have multiple unique asset type code for documents And same no of contentful Asset Types are present with matching asset type code SimpleTable: renders correctly with ALL columns 1`] = `
<div>
  <div
    class="DocumentSimpleTableResults css-358n7x"
    data-testid="document-simple-table-results"
  >
    <div
      class="css-1oyez8m"
    >
      <table
        class="MuiTable-root Table-rowNoColor css-wsrw3a-MuiTable-root"
        data-testid="table"
      >
        <thead
          class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
          data-testid="table-head"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader documentSimpleTableResultsStyles-tableHeaderCentered css-1tbee56-MuiTableCell-root"
              scope="col"
            >
              <div
                class="MuiFormControl-root css-1r7uzi1-MuiFormControl-root"
              >
                <label
                  class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                >
                  <span
                    aria-label="MC: documentLibrary.headers.add"
                    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                    data-testid="document-table-select-all"
                  >
                    <input
                      class="PrivateSwitchBase-input css-1m9pwf3"
                      data-indeterminate="false"
                      name="add"
                      type="checkbox"
                      value="false"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="CheckBoxOutlineBlankIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </span>
                </label>
              </div>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
              scope="col"
            >
              MC: documentLibrary.headers.typeCode
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
              scope="col"
            >
              MC: documentLibrary.headers.title
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
              scope="col"
            >
              MC: documentLibrary.headers.size
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader css-1tbee56-MuiTableCell-root"
              scope="col"
            >
              MC: documentLibrary.headers.actions
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
            data-testid="document-table-row-contentful-document-id"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-hsmwoy-MuiTableCell-root"
              data-testid="document-table-add-contentful-document-id"
            >
              <div
                class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
              >
                <label
                  class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                >
                  <span
                    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                  >
                    <input
                      aria-label="MC: documentLibrary.download contentful document title"
                      class="PrivateSwitchBase-input css-1m9pwf3"
                      data-indeterminate="false"
                      name="contentful-document-id-contentful_document_title"
                      type="checkbox"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="CheckBoxOutlineBlankIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </span>
                </label>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
              data-testid="document-table-title-contentful-document-id"
            >
              <abbr
                title="contentful asset type name"
              >
                contentful-asset-type-code
              </abbr>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ggd0b4-MuiTableCell-root"
              data-testid="document-table-title-contentful-document-id"
            >
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium  css-186oh1r-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/asset-filename.jpg"}"
                data-testid="document-table-download-image/jpeg-button"
                href="http://localhost:9000/asset-filename.jpg"
                rel="noopener noreferrer"
                tabindex="0"
                target="_blank"
              >
                <span
                  class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                >
                  <svg
                    class="download-icon css-z6lod7"
                    fill="none"
                    viewBox="0 0 48 48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M30.78 5H12.55v38H42V15.858L30.78 5z"
                      fill="#AEB1B1"
                    />
                    <path
                      d="M13.957 41.644V6.357h16.827v9.5H40.6v25.787H13.957z"
                      fill="#fff"
                    />
                    <rect
                      fill="#8E00EA"
                      height="14"
                      rx="1"
                      width="31"
                      x="6"
                      y="23"
                    />
                    <path
                      d="M10.098 31.812c.202.243.403.418.605.524.21.1.433.148.672.148.314 0 .56-.095.74-.285.186-.19.28-.468.28-.833v-5.173h1.69v5.288c0 .433-.07.81-.21 1.128-.143.32-.334.58-.573.786-.24.205-.515.357-.83.456-.305.1-.63.148-.974.148-1.083 0-1.915-.376-2.498-1.128l1.098-1.06zM15.21 26.194h2.724c.463 0 .86.068 1.188.205.328.136.597.318.806.546.217.22.374.478.47.775.105.297.158.605.158.924 0 .41-.07.77-.213 1.083-.135.303-.32.558-.56.763-.232.205-.5.36-.807.467-.306.107-.627.16-.964.16h-1.154v2.678H15.21v-7.6zm2.634 3.533c.314 0 .56-.096.74-.285.186-.198.28-.452.28-.764 0-.32-.094-.577-.28-.775-.187-.205-.437-.308-.75-.308h-.976v2.132h.986zM21.409 26.194h5.107v1.504H23.1v1.482h2.655v1.458H23.1v1.64h3.664v1.517H21.41v-7.6zM31.12 29.613H34v3.293c-.388.342-.844.608-1.367.798-.515.182-1.105.273-1.77.273-.613 0-1.162-.095-1.647-.285-.478-.197-.885-.47-1.22-.82-.337-.35-.595-.767-.774-1.254-.172-.486-.258-1.022-.258-1.607 0-.568.094-1.096.28-1.583.187-.486.452-.907.796-1.265.343-.364.75-.65 1.22-.854.47-.205.994-.308 1.57-.308.68 0 1.273.13 1.78.387.516.25.942.604 1.278 1.06l-1.143 1.106c-.24-.29-.504-.524-.795-.707-.284-.182-.635-.273-1.053-.273-.344 0-.65.064-.92.193-.268.13-.496.304-.683.525-.186.22-.328.48-.425.776-.098.296-.147.61-.147.945 0 .366.056.697.168.993.113.296.27.55.472.763.2.206.437.365.706.48.276.113.575.17.896.17.3 0 .57-.034.818-.103.246-.076.466-.193.66-.353v-.957h-1.32v-1.39z"
                      fill="#fff"
                    />
                  </svg>
                </span>
                <p
                  class="css-1cigd93"
                >
                  contentful document title
                </p>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
              data-testid="document-table-size-contentful-document-id"
            >
              1 B
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
              data-testid="document-table-actions-contentful-document-id"
            >
              <div
                class="css-1kto1mf"
              >
                <div
                  aria-label="MC: document.library.download.tooltip.title"
                  class=""
                  data-mui-internal-clone-element="true"
                  data-testid="tooltip"
                >
                  <a
                    aria-label="Download contentful document title"
                    class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-1vk2tp6-MuiButtonBase-root-MuiIconButton-root"
                    data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/asset-filename.jpg"}"
                    data-testid="document-table-actions-download-contentful-document-id"
                    href="http://localhost:9000/asset-filename.jpg"
                    rel="noopener noreferrer"
                    tabindex="0"
                    target="_blank"
                  >
                    <svg
                      class="document-simple-table-results-actionIconSmall css-afm3c7"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                        fill="currentColor"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
                <div
                  aria-label="MC: document.library.copyLink.tooltip.title"
                  class="MuiBox-root css-mvc5fa"
                  data-mui-internal-clone-element="true"
                  data-testid="tooltip"
                >
                  <button
                    aria-label="Copy contentful document title"
                    class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-1vk2tp6-MuiButtonBase-root-MuiIconButton-root"
                    data-testid="document-table-actions-copy-url-contentful-document-id"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      class="document-simple-table-results-actionIconSmall css-afm3c7"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.0786 3.99902H6.86837C6.11356 4.0012 5.50221 4.6036 5.5 5.34736V14.7857H6.86837V5.34736H15.0786V3.99902ZM17.1327 6.69556H9.60665C8.85184 6.69794 8.24049 7.35835 8.23828 8.17373V18.5209C8.24049 19.3363 8.85184 19.9967 9.60665 19.9991H17.1327C17.8875 19.9967 18.4989 19.3363 18.5011 18.5209V8.17373C18.4989 7.35835 17.8875 6.69794 17.1327 6.69556ZM17.1315 18.521H9.60547V8.17383H17.1315V18.521Z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
            data-testid="document-table-row-pim-document-id"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-hsmwoy-MuiTableCell-root"
              data-testid="document-table-add-pim-document-id"
            >
              <div
                class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
              >
                <label
                  class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                >
                  <span
                    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                  >
                    <input
                      aria-label="MC: documentLibrary.download pim document title"
                      class="PrivateSwitchBase-input css-1m9pwf3"
                      data-indeterminate="false"
                      name="pim-document-id-pim_document_title"
                      type="checkbox"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="CheckBoxOutlineBlankIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </span>
                </label>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
              data-testid="document-table-title-pim-document-id"
            >
              <abbr
                title="asset type name"
              >
                asset-type-code
              </abbr>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ggd0b4-MuiTableCell-root"
              data-testid="document-table-title-pim-document-id"
            >
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium  css-186oh1r-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                data-testid="document-table-download-application/pdf-button"
                href="http://localhost:9000/document.pdf"
                rel="noopener noreferrer"
                tabindex="0"
                target="_blank"
              >
                <span
                  class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                >
                  <svg
                    class="download-icon css-z6lod7"
                    fill="none"
                    viewBox="0 0 48 48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M30.776 5H12.54v37.997H42v-27.14L30.775 5z"
                      fill="#AEB1B1"
                    />
                    <path
                      d="M13.945 41.64V6.357H30.78v9.5h9.82V41.64H13.944z"
                      fill="#fff"
                    />
                    <rect
                      fill="#D43533"
                      height="14"
                      rx="1"
                      width="30"
                      x="6"
                      y="23"
                    />
                    <path
                      d="M11 26h2.916c.496 0 .92.072 1.272.216.352.144.64.336.864.576.232.232.4.504.504.816.112.312.168.636.168.972 0 .432-.076.812-.228 1.14-.144.32-.344.588-.6.804-.248.216-.536.38-.864.492-.328.112-.672.168-1.032.168h-1.236v2.82H11V26zm2.82 3.72c.336 0 .6-.1.792-.3.2-.208.3-.476.3-.804 0-.336-.1-.608-.3-.816-.2-.216-.468-.324-.804-.324h-1.044v2.244h1.056zM17.637 26h3.024c.617 0 1.186.08 1.706.24.527.16.98.404 1.355.732.386.328.68.748.89 1.26.216.512.323 1.116.323 1.812 0 .664-.107 1.244-.323 1.74-.216.488-.517.9-.9 1.236-.377.328-.83.576-1.357.744-.52.16-1.088.24-1.704.24h-3.012V26zm2.916 6.396c.8 0 1.416-.208 1.848-.624.434-.424.65-1.004.65-1.74 0-.368-.053-.7-.157-.996-.096-.304-.248-.56-.456-.768-.2-.216-.456-.38-.768-.492-.313-.12-.685-.18-1.117-.18H19.45v4.8h1.104zM25.88 26h5.377v1.596H27.69v1.812h2.712v1.548h-2.712v3.048h-1.81V26z"
                      fill="#fff"
                    />
                  </svg>
                </span>
                <p
                  class="css-1cigd93"
                >
                  pim document title
                </p>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
              data-testid="document-table-size-pim-document-id"
            >
              1 B
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-yrvb15-MuiTableCell-root"
              data-testid="document-table-actions-pim-document-id"
            >
              <div
                class="css-1kto1mf"
              >
                <div
                  aria-label="MC: document.library.download.tooltip.title"
                  class=""
                  data-mui-internal-clone-element="true"
                  data-testid="tooltip"
                >
                  <a
                    aria-label="Download pim document title"
                    class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-1vk2tp6-MuiButtonBase-root-MuiIconButton-root"
                    data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                    data-testid="document-table-actions-download-pim-document-id"
                    href="http://localhost:9000/document.pdf"
                    rel="noopener noreferrer"
                    tabindex="0"
                    target="_blank"
                  >
                    <svg
                      class="document-simple-table-results-actionIconSmall css-afm3c7"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                        fill="currentColor"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
                <div
                  aria-label="MC: document.library.copyLink.tooltip.title"
                  class="MuiBox-root css-mvc5fa"
                  data-mui-internal-clone-element="true"
                  data-testid="tooltip"
                >
                  <button
                    aria-label="Copy pim document title"
                    class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-1vk2tp6-MuiButtonBase-root-MuiIconButton-root"
                    data-testid="document-table-actions-copy-url-pim-document-id"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      class="document-simple-table-results-actionIconSmall css-afm3c7"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.0786 3.99902H6.86837C6.11356 4.0012 5.50221 4.6036 5.5 5.34736V14.7857H6.86837V5.34736H15.0786V3.99902ZM17.1327 6.69556H9.60665C8.85184 6.69794 8.24049 7.35835 8.23828 8.17373V18.5209C8.24049 19.3363 8.85184 19.9967 9.60665 19.9991H17.1327C17.8875 19.9967 18.4989 19.3363 18.5011 18.5209V8.17373C18.4989 7.35835 17.8875 6.69794 17.1327 6.69556ZM17.1315 18.521H9.60547V8.17383H17.1315V18.521Z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`DocumentResults component cards: renders correctly 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
    data-testid="document-cards-results-grid"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-12 MuiGrid2-grid-lg-6 MuiGrid2-grid-xl-4 Grid-item css-8c4xmf-MuiGrid2-root"
      data-testid="grid-item"
    >
      <div
        class="OverviewCard-clickable MuiBox-root css-1a938px"
      >
        <a
          class="MuiButtonBase-root OverviewCard-main css-10d1a0h-MuiButtonBase-root"
          data-gtm="{"id":"cta-click1","label":"MC: documentLibrary.card.download","action":"http://localhost:9000/asset-filename.jpg"}"
          href="https:http://localhost:9000/asset-filename.jpg"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
        >
          <a
            class="MuiButtonBase-root OverviewCard-body css-10d1a0h-MuiButtonBase-root"
            data-gtm="{"id":"cta-click1","label":"MC: documentLibrary.card.download","action":"http://localhost:9000/asset-filename.jpg"}"
            href="https:http://localhost:9000/asset-filename.jpg"
            rel="noopener noreferrer"
            tabindex="0"
            target="_blank"
          >
            <div
              class="OverviewCard-brandLogo"
            >
              <svg
                class=" css-1bpjlyv"
                data-testid="brand-logo"
                preserveAspectRatio="xMinYMin"
                viewBox="0 0 244 100"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.506 29H25.89l15.236 41.02H30.882l-3.187-9.387H13.02L9.833 70.02H0L15.506 29Zm9.833 24.444-4.981-15.466-5.263 15.466H25.34ZM72.008 66.851c-.28.14-.832.55-1.523.97-.832.55-1.664.97-2.636 1.38-1.243.55-2.496.97-3.74 1.24-1.663.409-3.327.549-4.98.549-2.356 0-4.572-.41-6.787-1.11-1.934-.69-3.598-1.8-5.122-3.179-1.383-1.38-2.495-3.04-3.187-4.839-.692-2.07-1.113-4.139-1.113-6.358 0-1.93.28-4.01.972-5.799 1.243-3.729 4.15-6.628 7.759-8.288a16.83 16.83 0 0 1 6.374-1.24c2.226 0 4.29.41 6.235 1.24 1.804.83 3.328 1.93 4.57 3.45a14.765 14.765 0 0 1 2.767 5.248c.692 2.21.973 4.419.973 6.628v1.52H51.66c0 1.66.833 3.04 2.076 4.139 1.523 1.24 3.598 1.93 5.543 1.8 1.934.14 3.878-.28 5.673-.97 1.112-.55 2.215-1.11 3.187-1.8l3.88 5.389-.01.03ZM64.12 52.624c0-.69-.14-1.24-.411-1.93-.27-.689-.692-1.239-1.113-1.799a6.98 6.98 0 0 0-1.934-1.38c-.822-.41-1.804-.55-2.636-.55-.973 0-1.935.14-2.767.55-.691.28-1.383.83-1.934 1.38-.552.55-.973 1.11-1.243 1.8-.281.55-.411 1.24-.411 1.93H64.13h-.01ZM77.692 41.157h8.59l.28 3.59c.832-1.11 1.935-2.07 3.047-2.76 1.524-.97 3.328-1.38 5.122-1.38.692 0 1.384 0 2.075.14l1.664.41-1.383 7.868a13.282 13.282 0 0 0-3.188-.41c-1.934-.14-3.738.55-5.122 1.93-1.383 1.38-2.075 3.32-1.934 5.389V70.02h-9.001l-.14-28.863h-.01ZM99.703 55.524c0-2.07.411-4.14 1.113-5.939.701-1.8 1.804-3.45 3.187-4.839 1.383-1.39 3.047-2.49 4.982-3.319a16.823 16.823 0 0 1 6.374-1.24c2.226 0 4.291.41 6.375 1.24 1.805.69 3.458 1.93 4.982 3.32 1.383 1.379 2.496 3.038 3.187 4.838a16.364 16.364 0 0 1 0 12.017c-.691 1.8-1.804 3.45-3.187 4.84-1.383 1.389-3.047 2.489-4.982 3.318a16.825 16.825 0 0 1-6.375 1.24c-2.225 0-4.43-.41-6.374-1.24a14.767 14.767 0 0 1-8.169-8.148c-.692-1.93-1.113-4.009-1.113-6.078v-.01Zm15.787 7.738c.972 0 2.075-.14 3.047-.69.832-.41 1.664-.97 2.215-1.8.551-.69 1.113-1.52 1.383-2.489.552-1.8.552-3.87 0-5.659-.28-.97-.691-1.8-1.383-2.489-.551-.69-1.383-1.24-2.215-1.66-.972-.41-1.935-.69-3.047-.69-1.113 0-2.075.14-3.047.69-.832.41-1.664.97-2.216 1.66-.551.69-1.112 1.52-1.383 2.49a7.982 7.982 0 0 0 0 5.658c.281.97.692 1.8 1.383 2.49a7.107 7.107 0 0 0 2.216 1.799c.972.55 1.934.83 3.047.69ZM137.231 29h15.786c3.048 0 5.954.41 8.861 1.24 2.626.69 4.982 2.07 7.067 3.729a16.476 16.476 0 0 1 4.57 6.488c1.113 2.9 1.805 6.079 1.664 9.258.141 3.04-.551 6.079-1.664 8.838-1.112 2.49-2.626 4.559-4.711 6.358-2.085 1.8-4.43 3.04-7.066 3.87a32.622 32.622 0 0 1-8.861 1.24h-15.646V29Zm15.235 32.732c4.15 0 7.337-1.11 9.693-3.179 2.355-2.35 3.598-5.529 3.328-8.838 0-1.8-.281-3.45-.832-5.109-.411-1.52-1.243-2.76-2.356-3.869-1.112-1.11-2.496-1.93-4.019-2.49-1.935-.689-3.879-.969-5.814-.829h-5.813v24.314h5.813ZM208.687 66.851c-.28.14-.831.55-1.523.97-.832.55-1.664.97-2.626 1.38-1.243.55-2.496.97-3.739 1.24-1.664.409-3.328.549-4.982.549-2.355 0-4.57-.41-6.785-1.11-1.935-.69-3.599-1.8-5.122-3.179-1.384-1.38-2.496-3.04-3.188-4.839-.691-2.07-1.112-4.139-1.112-6.358 0-1.93.28-4.01.972-5.799 1.243-3.729 4.15-6.628 7.758-8.288 2.075-.83 4.15-1.24 6.375-1.24 2.225 0 4.29.41 6.234 1.24 1.805.83 3.328 1.93 4.571 3.45a14.775 14.775 0 0 1 2.767 5.248c.691 2.21.972 4.419.972 6.628v1.52H188.35c0 1.66.832 3.04 2.075 4.139 1.523 1.24 3.598 1.93 5.543 1.8 1.934.14 3.879-.28 5.673-.97 1.113-.55 2.215-1.11 3.187-1.8l3.88 5.389-.021.03Zm-7.888-14.227c0-.69-.14-1.24-.411-1.93-.271-.689-.692-1.239-1.112-1.799a6.991 6.991 0 0 0-1.935-1.38c-.822-.41-1.804-.55-2.626-.55-.972 0-1.935.14-2.767.55-.691.28-1.383.69-1.934 1.38-.551.55-.972 1.11-1.243 1.8-.281.55-.411 1.24-.411 1.93h12.459-.02ZM214.371 29h9.001v21.275l9.001-9.118h10.244l-10.525 10.638L244 70.03h-10.384l-7.478-12.157-2.626 2.63v9.527h-9.001l-.14-41.02V29Z"
                  fill="#70706F"
                />
              </svg>
            </div>
            <h4
              class="MuiTypography-root MuiTypography-h4 OverviewCard-title css-1x9euu8-MuiTypography-root"
              data-testid="overview-card-body-title"
            >
              contentful document title
            </h4>
            <div
              class="OverviewCard-text css-kl66ak"
              data-testid="overview-card-body-description"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
        <div
          class="OverviewCard-clickable css-1cyx9t4"
          data-testid="overview-card-body-footer"
        >
          <div
            class="css-1elv8vm"
          >
            <div
              aria-label="MC: document.library.copyLink.tooltip.title"
              class="MuiBox-root css-mvc5fa"
              data-mui-internal-clone-element="true"
              data-testid="tooltip"
            >
              <button
                aria-label="Copy contentful document title"
                class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-large Button-text MuiIconButton-sizeLarge css-swmm17-MuiButtonBase-root-MuiIconButton-root"
                data-testid="document-table-actions-copy-url-contentful-document-id"
                tabindex="0"
                type="button"
              >
                <svg
                  class="css-afm3c7"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.0786 3.99902H6.86837C6.11356 4.0012 5.50221 4.6036 5.5 5.34736V14.7857H6.86837V5.34736H15.0786V3.99902ZM17.1327 6.69556H9.60665C8.85184 6.69794 8.24049 7.35835 8.23828 8.17373V18.5209C8.24049 19.3363 8.85184 19.9967 9.60665 19.9991H17.1327C17.8875 19.9967 18.4989 19.3363 18.5011 18.5209V8.17373C18.4989 7.35835 17.8875 6.69794 17.1327 6.69556ZM17.1315 18.521H9.60547V8.17383H17.1315V18.521Z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              class="css-b7sks0"
            />
            <div
              aria-label="MC: document.library.download.tooltip.title"
              class=""
              data-mui-internal-clone-element="true"
              data-testid="tooltip"
            >
              <a
                aria-label="Download contentful document title"
                class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-large Button-text MuiIconButton-sizeLarge css-swmm17-MuiButtonBase-root-MuiIconButton-root"
                data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/asset-filename.jpg"}"
                data-testid="document-table-actions-download-contentful-document-id"
                href="http://localhost:9000/asset-filename.jpg"
                rel="noopener noreferrer"
                tabindex="0"
                target="_blank"
              >
                <svg
                  class="css-afm3c7"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DocumentResults component technicalTable: renders correctly 1`] = `
<div>
  <div
    class="css-1blc44m"
    data-testid="tech-results-accordion"
  >
    <div
      class="css-1blc44m"
    >
      <div
        class=" css-1u48ai"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-q3x8p3-MuiPaper-root-MuiAccordion-root"
          data-testid="tech-table-accordion-item-product-base-code"
        >
          <div
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot MuiAccordionSummary-gutters css-1luoz50-MuiButtonBase-root-MuiAccordionSummary-root"
            data-gtm="{"id":"selector-accordion1","label":"product-base-code","action":"Selector – Accordion"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
            >
              <div>
                <div
                  class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
                >
                  <label
                    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                  >
                    <span
                      class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                    >
                      <input
                        aria-label="Select all documents for product name"
                        class="PrivateSwitchBase-input css-1m9pwf3"
                        data-indeterminate="false"
                        name="product-base-code"
                        type="checkbox"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="CheckBoxOutlineBlankIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </span>
                  </label>
                </div>
              </div>
              <span
                class="css-1oh4pbz"
              >
                product name
              </span>
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="ExpandMoreIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  class="MuiAccordion-region"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root DocumentTechnicalTableResults-accordionDetails css-1r7u8wy-MuiAccordionDetails-root"
                  >
                    <a
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1g897i8-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                      data-testid="document-table-download-application/pdf-button"
                      href="http://localhost:9000/document.pdf"
                      rel="noopener noreferrer"
                      tabindex="0"
                      target="_blank"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                      >
                        <svg
                          class="download-icon css-z6lod7"
                          fill="none"
                          viewBox="0 0 48 48"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M30.776 5H12.54v37.997H42v-27.14L30.775 5z"
                            fill="#AEB1B1"
                          />
                          <path
                            d="M13.945 41.64V6.357H30.78v9.5h9.82V41.64H13.944z"
                            fill="#fff"
                          />
                          <rect
                            fill="#D43533"
                            height="14"
                            rx="1"
                            width="30"
                            x="6"
                            y="23"
                          />
                          <path
                            d="M11 26h2.916c.496 0 .92.072 1.272.216.352.144.64.336.864.576.232.232.4.504.504.816.112.312.168.636.168.972 0 .432-.076.812-.228 1.14-.144.32-.344.588-.6.804-.248.216-.536.38-.864.492-.328.112-.672.168-1.032.168h-1.236v2.82H11V26zm2.82 3.72c.336 0 .6-.1.792-.3.2-.208.3-.476.3-.804 0-.336-.1-.608-.3-.816-.2-.216-.468-.324-.804-.324h-1.044v2.244h1.056zM17.637 26h3.024c.617 0 1.186.08 1.706.24.527.16.98.404 1.355.732.386.328.68.748.89 1.26.216.512.323 1.116.323 1.812 0 .664-.107 1.244-.323 1.74-.216.488-.517.9-.9 1.236-.377.328-.83.576-1.357.744-.52.16-1.088.24-1.704.24h-3.012V26zm2.916 6.396c.8 0 1.416-.208 1.848-.624.434-.424.65-1.004.65-1.74 0-.368-.053-.7-.157-.996-.096-.304-.248-.56-.456-.768-.2-.216-.456-.38-.768-.492-.313-.12-.685-.18-1.117-.18H19.45v4.8h1.104zM25.88 26h5.377v1.596H27.69v1.812h2.712v1.548h-2.712v3.048h-1.81V26z"
                            fill="#fff"
                          />
                        </svg>
                      </span>
                      <p
                        class="css-1cigd93"
                      >
                        asset type name
                      </p>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <div
                      class="css-16cnxgu"
                    >
                      <span
                        class="css-tgspdx"
                      >
                        MC: documentLibrary.headers.size
                        :
                      </span>
                      <span
                        class="css-jcllbd"
                        data-testid="tech-results-accordion-size-pim-document-id"
                      >
                        1 B
                      </span>
                    </div>
                    <div
                      class="css-1bvc4cc"
                    >
                      <div
                        class="MuiBox-root css-38zrbw"
                      >
                        <div
                          aria-label="MC: document.library.download.tooltip.title"
                          class=""
                          data-mui-internal-clone-element="true"
                          data-testid="tooltip"
                        >
                          <a
                            aria-label="Download pim document title"
                            class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-1vk2tp6-MuiButtonBase-root-MuiIconButton-root"
                            data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                            data-testid="document-table-actions-download-pim-document-id"
                            href="http://localhost:9000/document.pdf"
                            rel="noopener noreferrer"
                            tabindex="0"
                            target="_blank"
                          >
                            <svg
                              class="document-simple-table-results-actionIconSmall css-afm3c7"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                                fill="currentColor"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </a>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root css-enhvy5"
                      >
                        <div
                          aria-label="MC: document.library.copyLink.tooltip.title"
                          class="MuiBox-root css-mvc5fa"
                          data-mui-internal-clone-element="true"
                          data-testid="tooltip"
                        >
                          <button
                            aria-label="Copy pim document title"
                            class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-1vk2tp6-MuiButtonBase-root-MuiIconButton-root"
                            data-testid="document-table-actions-copy-url-pim-document-id"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              class="document-simple-table-results-actionIconSmall css-afm3c7"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.0786 3.99902H6.86837C6.11356 4.0012 5.50221 4.6036 5.5 5.34736V14.7857H6.86837V5.34736H15.0786V3.99902ZM17.1327 6.69556H9.60665C8.85184 6.69794 8.24049 7.35835 8.23828 8.17373V18.5209C8.24049 19.3363 8.85184 19.9967 9.60665 19.9991H17.1327C17.8875 19.9967 18.4989 19.3363 18.5011 18.5209V8.17373C18.4989 7.35835 17.8875 6.69794 17.1327 6.69556ZM17.1315 18.521H9.60547V8.17383H17.1315V18.521Z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
